samples/_failures_safe/1761093022_8121a5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_69fc2fd1.c: In function ‘handle_writing’:
./samples/SAFE/__tmp_69fc2fd1.c:158:14: error: ‘EVENT_ST’ undeclared (first use in this function); did you mean ‘EVENT_EXIT’?
  158 |         case EVENT_ST
      |              ^~~~~~~~
      |              EVENT_EXIT
./samples/SAFE/__tmp_69fc2fd1.c:158:14: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_69fc2fd1.c:158:9: error: expected ‘:’ or ‘...’ at end of input
  158 |         case EVENT_ST
      |         ^~~~
./samples/SAFE/__tmp_69fc2fd1.c:158:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_69fc2fd1.c:158:9: error: expected declaration or statement at end of input
